--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "postcss": "^8",
     "prettier": "^3.2.5",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "wrangler": "^3.51.0"
   }
 }
