--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.3",
+    "@material-tailwind/react": "^2.1.9",
     "axios": "^1.6.8",
     "next": "14.2.1",
     "react": "^18",
