--- a/package.json
+++ b/package.json
@@ -12,14 +12,19 @@
     "@heroicons/react": "^2.1.3",
     "@material-tailwind/react": "^2.1.9",
     "axios": "^1.6.8",
+    "crypto": "^1.0.1",
+    "crypto-js": "^4.2.0",
     "next": "14.2.1",
+    "pbkdf2": "^3.1.2",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "daisyui": "^4.10.5",
     "eslint": "^8",
     "eslint-config-next": "14.2.1",
     "postcss": "^8",
