--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@harshiyer/json-crypto": "^1.0.1",
     "@heroicons/react": "^2.1.3",
     "@material-tailwind/react": "^2.1.9",
     "axios": "^1.7.1",
@@ -23,7 +24,7 @@
   },
   "devDependencies": {
     "@types/crypto-js": "^4.2.2",
-    "@types/node": "^20",
+    "@types/node": "^20.12.12",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "daisyui": "^4.11.1",
