--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "vitest",
+    "format": "prettier --write .",
+		"check-format": "prettier --check ."
   },
   "dependencies": {
-    "@harshiyer/json-crypto": "^1.0.4",
+    "@harshiyer/json-crypto": "^1.0.6",
     "@heroicons/react": "^2.1.3",
     "@material-tailwind/react": "^2.1.9",
     "axios": "^1.7.2",
@@ -20,7 +23,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.1.2",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "vitest": "^1.6.0"
   },
   "devDependencies": {
     "@types/crypto-js": "^4.2.2",
