--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
     "lint": "next lint",
     "test": "vitest",
     "format": "prettier --write .",
-		"check-format": "prettier --check ."
+    "check-format": "prettier --check ."
   },
   "dependencies": {
     "@harshiyer/json-crypto": "^1.0.7",
     "@heroicons/react": "^2.1.3",
     "@material-tailwind/react": "^2.1.9",
     "axios": "^1.7.2",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "crypto-js": "^4.2.0",
+    "jsonwebtoken": "8.5.1",
     "next": "14.2.3",
     "pbkdf2": "^3.1.2",
     "react": "^18",
